--- a/css/style.css
+++ b/css/style.css
@@ -21,8 +21,9 @@ body{
   margin-bottom: 5px;
 }
 .container{
-  width: 80%;
-  height: 100vh;
+  min-width: 900px;
+  width: 80vw;
+  height: 95vh;
   margin: 30px auto;
 }
 .avatar{
@@ -196,7 +197,6 @@ body{
   position: relative;
   width: 70%;
   height: 100%;
-  background: #f3eeea;
 }
 #right .top{
   width: 100%;
@@ -207,7 +207,7 @@ body{
 #right .chat{
   position: relative;
   width: 100%;
-  height: 76%;
+  height: 88%;
   overflow-y: auto;
   background-image: url(../img/mine.jpg);
   background-size: contain;
